create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -304,7 +304,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10000.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="29" style="background-image: url(assets/images/contact-bg-1960x10001.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -385,7 +385,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><blockquote><p>Early Birds Event is a private sales offering before ITO is launched. Early contributors in Early Birds will get 12,000 GTMR token for each 1 ETH contribution. GETModer Early Birds provate sale event will start on 15 March 2018 and end on 15 Arpil.&nbsp;</p><p><br></p><p>GETModer's Early Birds private sale is uncapped. Any unsold token will be carried forward to Pre-ICO which will start on 16 April 2018</p><p><br></p><p>Blockchain is an open and decentralized system that can effectively register and constantly check transactions between two parties. Despite its simplicity, the basic technology of blocking provides decentralization, openness, and security to any interaction processes.</p></blockquote></div>
+            <div class="col-xs-12 lead"><blockquote><p>Early Birds Event is a private sales offering before ITO is launched. Early contributors in Early Birds will get 12,000 GTMR token for each 1 ETH contribution. GETModer Early Birds provate sale event will start on 15 March 2018 and end on 15 Arpil.&nbsp;</p><p><br></p><p>GETModer's Early Birds private sale is uncapped. Any unsold token will be carried forward to Pre-ICO which will start on 16 April 2018</p><p><br></p><p>Blockchain is an open and decentralized system that can effectively register and constantly check transactions between two parties. Despite its simplicity, the basic technology of blocking provides decentralization, openness, and security to any interaction processes.</p><p><br></p><p>Cryptocurrencies are digital or virtual currencies that are encrypted (protected) using cryptography. Cryptography is one of the methods of encryption to ensure and verify the transfer of transactions. Altcoins are any coins that are an alternative to bitcoin. Tokens are certain assets that are interchangeable and available.</p></blockquote></div>
         </div>
     </div>
 
