--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="162" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="162" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="iw+uC0ujWm48m9K8IdNH4ghqkM9GtIcAdrUVGzo1JROD3Mppw9iwJr/5Q7ObLmO+h7e0bPmefgAjr+lz90r2ErElgsRMmSxy4HTZb6tYFurFcnm1LkTcYuBrGvC+HP8R" data-form-email="true">
+                                <input type="hidden" value="H4DYOG++CWsHkVz+Ugy1D8EWki/jfhM38b/I4+NAMJKWbc8xitjJTvvnB8S3KRIQL7pvpfA3gm0gsZGJdwycFO/OtQF0XwHovLOW6MX6q+2OG4U8EE7idqSVxc5SoPsq" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
