--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free web software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/k">bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -117,7 +117,11 @@
 
                             <div class="mbr-section-text lead text-center">
                                 <p>GETMODER IS A BLOCKCHAIN-BASED DECENTRALISED MARKETPLACE FOR BORROWING AND LENDING CRYPTO ASSETS IN A SAFE
-AND LEGALLY COMPLIANT WAY.<br><br><br><strong>ALL WILL BENEFIT</strong><br><strong><br>a) INDIVIDUALS
+AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><br>◎ GENERATE INCOME FROM LENDING
+<br>
+<br>◎ RAISE LIQUIDITY AGAINST CRYPTO COLLATERAL
+<br>
+<br>◎ BORROW CRYPTO ASSETS TO GO SHORT<br><br><br><strong>ALL WILL BENEFIT</strong><br><strong><br>a) INDIVIDUALS
 <br></strong>- Individuals
 <br>- Professional traders
 <br>- Cryptominers<br><br><strong>b) COMPANIES
