create github pages

--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="162" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="162" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="jbSAxnOJByVJ37pgFXCSHy/uoelKXKo6BuSefN3+FlmO1i+DGO6jhD61H0UlqZ3eccbB8CjzzFY/DE38qYa+HChezZPPzjCr7QFObukC9x4PYnEOO+b5j7h41MnW4KVs" data-form-email="true">
+                                <input type="hidden" value="Z2FrWiJhDSFc8+Zg/zR8pF78h2G23qk8WYRX67DBfunAE2Ih1NiZlDU48bdk6Jzp6QccA5cb9Y/ClEz7LwFd7mPNfMOEn7hUkg6d8Oez1H+XaiuN6YqGWqcKCG2iaHNg" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
