--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free web site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="74" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap navbar</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="74" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="nr1emzVGc+pdingknGZtQ0avXk73gxhpGNhslTA7r7cidebxI5PlBGZvgxZQl1gypKJbEw2MbRsCXnNFnY0/Qw+G3f6H/v3FkRPzlbJ7c+q1IHQQHqINAmqELQ7u4f+b" data-form-email="true">
+                                <input type="hidden" value="CIgX3hfPdhJZwPOwlB73pWAHwobNIJmG+fZSMxAxLphl7D2kJtpqoHPHBhpCZ8qEuU/0t/Z6F7OXqQWusMxpPDqKn2Ir+faGznJqU788N5tkU7+be+MWr1rq89DdT5YU" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
