create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -979,7 +979,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                         <p class="mbr-section-text-gray lead h-black"><strong>15 May 2018</strong></p>
                     </div>
                     <div class="timeline-panel">
-                        <h4 class="h-black"><span style="font-weight: normal;">- Pre-ICO Started</span><br><span style="font-weight: normal;">- Upgrade GETModer W2W server</span><br><span style="font-weight: normal;">- Release Whitepaper</span><br><span style="font-weight: normal;">- Release full team profile</span></h4>
+                        <h4 class="h-black"><span style="font-weight: normal;">- Pre-ITO Started</span><br><span style="font-weight: normal;">- Upgrade GETModer W2W server</span><br><span style="font-weight: normal;">- Release Whitepaper</span><br><span style="font-weight: normal;">- Release full team profile</span></h4>
                         <p class="mbr-section-text-gray lead h-black"></p>
                     </div>
                     <span class="iconBackgroundInverse"><span class="icon"><span class="etl-icon icon-upload mbr-iconfont-features6" style="color: #666666"></span></span></span>
@@ -991,7 +991,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
                     </div>
                     <span class="iconBackground"><span class="icon"><span class="etl-icon icon-linegraph mbr-iconfont-features6" style="color: #666666"></span></span></span>
                     <div class="timeline-panel">
-                        <h4 class="h-black text-right"><span style="font-weight: normal;">- ICO Started</span><br></h4>
+                        <h4 class="h-black text-right"><span style="font-weight: normal;">- ITO Started</span><br></h4>
                         <p class="mbr-section-text-gray lead h-black"></p>
                     </div>
                 </li>
