--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/c">free web site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="168" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="168" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="rFvlm32Wb6vZ0WCBk0UuX7tk9n2wHzvQsqAWLx/GLc52T34GkR2CR/0Vs/m6T4BvssWxfQzEjEw25RewfbPyfCwtoqVlK4v2hKdwDLH4+77hAOhbk7xQ6bdppCLFBPOk" data-form-email="true">
+                                <input type="hidden" value="bDYe5bsF3H9ubcDbOhUQPSK9lIzqCeWeyh+3hko6vugQMxDOdBISQg3RCFRYCa9tEG2TVzLfkpoDKSjMh4Lb6nH04rlOEp7OoEjw1l1sEy95LpiUqwA5/IpA1B6oRJr+" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
