create github pages

--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/e">web maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="106" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">free web maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="106" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="Bdg1pyRIxnq1oR68bsixuxeJFsa9rSitI6V8QE/t8y/N9TZGQ1uUOVOOgV9orJhzFnhBaTZYvUNqmrYRSQfk7/d4/gsv2+4hP2+04NRs/29LTapdIwBSNAb/ZN/prcAN" data-form-email="true">
+                                <input type="hidden" value="eqcehJDr4qOZq9g4pH7qrwy0YbuRWRGrTycaHtNEPk18axIDkWaZdBiL2vNXcx5ybBA8cxMOvJ1Fn6QC9pPDzi7pFSjrdvQqDIhi9o+j2+VhLgpa/dVLZjNlqRTlogOH" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
