create github pages

--- a/page5.html
+++ b/page5.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-z" data-rv-view="96">
+<section id="ext_menu-z" data-rv-view="76">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,21 +57,21 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="100" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-19" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p>Privacy Policy</p><p><br></p><p>GETModer oundation (“GETModer.io” or “we”) controls and provides access to the GETModer.io website, currently located at www.GETModer.io (the “Website”).</p><p><br></p><p>
+            <div class="col-xs-12 lead"><p><br></p><p><br></p><p><br></p><p><br></p><p>Privacy Policy</p><p><br></p><p>GETModer Foundation (“GETModer.io” or “we”) controls and provides access to the GETModer.io website, currently located at www.GETModer.io (the “Website”).</p><p><br></p><p>
 </p><p>
-</p><p>At GETModer, we are fully committed to respecting your privacy and to protecting any information that our clients provide. Your privacy and security are both our highest priorities and we make every effort to ensure that all the information provided by you is protected. This Privacy Policy (the “Policy”) is designed to inform you about the terms of treating your personal data.
+</p><p>At GETModer, we are fully committed to respect your privacy and to protect any information that our clients provide. Your privacy and security are both our highest priorities and we make every effort to ensure that all the information provided by you is protected. This Privacy Policy (the “Policy”) is designed to inform you about the terms of treating your personal data.
 </p><p>
 </p><p><br></p><p>Personal Information
 </p><p>
-</p><p>In order to access the functionality of the Website, you will may need to register. When registering, you may be asked to provide an email address and create a password. You may also choose to link to the Website using one of your accounts on the social networks, such as Twitter, Facebook and Google+.
+</p><p>In order to access the functionality of the Website, you <em>may be</em> requested to register as a user. When registering, you may be asked to provide an email address and create a password. You may also choose to link to the Website using one of your accounts on the social networks, such as Twitter, Facebook and Google+.
 </p><p>
 </p><p><br></p><p>Record Collection
 </p><p>
-</p><p>From the moment you register on mit.exchange, our software will start collecting your non-personal identification information. Such information may include your browser’s name and technical information about your means of connection to our Website, in particular the operating system and the Internet service providers used among other similar information.
+</p><p>From the moment you register on getmoder.exchange or getmoder.io (if requested), our software will start collecting your non-personal identification information. Such information may include your browser’s name and technical information about your means of connection to our Website, in particular the operating system and the Internet service providers used among other similar information.
 </p><p>
 </p><p><br></p><p>The Use of Collected Information
 </p><p>
@@ -79,7 +79,7 @@
 </p><p>
 </p><p><br></p><p>Security
 </p><p>
-</p><p>mit.exchange aims to protect the security of your information as much as we aim to protect our own information and network. We will not permit any third parties to contact you directly on an unsolicited basis in relation to their own products or services. We do not sell, trade, or rent your personal identification information to others. You should never disclose your account password to unauthorized parties. We use certain security measures to help keep your personal information safe, but we cannot guarantee that these measures will stop any users try to get around the privacy or security settings on the Website through unforeseen and/or illegal activity.
+</p><p>We aims to protect the security of your information as much as we aim to protect our own information and network. We will not permit any third parties to contact you directly on an unsolicited basis in relation to their own products or services. We do not sell, trade, or rent your personal identification information to others. You should never disclose your account password to unauthorized parties. We use certain security measures to help keep your personal information safe, but we cannot guarantee that these measures will stop any users try to get around the privacy or security settings on the Website through unforeseen and/or illegal activity.
 </p><p>
 </p><p><br></p><p>Changes to the Policy
 </p><p>
@@ -87,13 +87,13 @@
 </p><p>
 </p><p><br></p><p>Contacting us
 </p><p>
-</p><p>If you have any questions about this Privacy Policy or the rules of mit.exchange, please contact us at the <a href="page3.html">Contact Us</a> page.</p></div>
+</p><p>If you have any questions about this Privacy Policy or the rules of our platform, please contact us at the <a href="page3.html">Contact Us</a> page.</p></div>
         </div>
     </div>
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="98" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-10" data-rv-view="78" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETModer. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
