create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="58" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/c">free web site maker</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="58" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -295,7 +295,7 @@ AND LEGALLY COMPLIANT WAY. INTEGRATED WITH INSTANT CRYPTOCURRENCY EXCHANGE<br><b
 </div><div><strong>b) Instant Cryptocurrency Exchange</strong></div><div><strong><a href="https://getmoder.exchange/" class="text-danger">Access GETModer Exchange here</a></strong></div><div><strong><br></strong></div><div><strong>
 </strong></div><div>Our instant wallet to wallet exchange allows you to trade cryptocurrency without registering at any exchange or needing verification. The parent service already has over 700,000 customers onboard and processes over 50,000 BTC monthly. Our platform is partnered with Jaxx, Coinmarketcap, Bittrex, Coinpayments, Uquid debit card, Coinomi, and other reputable companies.
 </div><div>The wide range of cryptocurrency trading pairs provided makes the platform particularly appealing. It creates an opportunity to exchange any two currencies with minimal fuss. Traditional cryptocurrency trading platforms generally have a limited selection of trading pairs, meaning that sometimes users have to make multiple transactions to receive their desired cryptocurrency. Fiat currency support will be added to our exchange, with the inclusion of credit and debit card purchases.</div><div><strong><br></strong></div><div><strong>Incentives:</strong> We will provide most profitable free trading signals according to in-depth technical analysis of cryptocurrency trading. Hence encourage mass users to use our exchange platform because of the free signals.</div><div><strong><br></strong></div><div><strong>Our profits:</strong> Trading transaction fee
-</div><div><strong><br></strong></div><div><strong>Target:</strong> USD $100 million exchange volume per-day. 40% of the trading revenue earned from this currency exchange will use to buy back GTMR tokens circulating in the markets to fund our Lending Platform.<span style="font-size: 1.07rem;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></div><p></p></div>
+</div><div><strong><br></strong></div><div><strong>Target:</strong> USD $100 million exchange volume per-day. 40% of the trading revenue earned from this currency exchange will use to fund and expanding our Lending Platform.<span style="font-size: 1.07rem;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span></div><p></p></div>
                 
             </div>
         </div>
